created template for baitsets page

--- a/instance/paneldb_config.cfg
+++ b/instance/paneldb_config.cfg
@@ -1,4 +1,8 @@
+#Turns on debugging features in Flask
+DEBUG = True
 
-SECRET_KEY='/Ytvhsuasbnjj255ahsajakkaa1'
+#secret key:
+SECRET_KEY='Ytvhsuasbnjj255ahsajakkaa1'
 
+#paneldb database connection URI:
 MONGODB_URI = 'mongodb://localhost:27017/paneldb'
