Added first steps to save file

--- a/instance/paneldb_config.cfg
+++ b/instance/paneldb_config.cfg
@@ -6,3 +6,8 @@ SECRET_KEY='Ytvhsuasbnjj255ahsajakkaa1'
 
 #paneldb database connection URI:
 MONGODB_URI = 'mongodb://localhost:27017/paneldb'
+
+# Upload folder local
+UPLOAD_FOLDER='/Users/emmasernstad/Documents/GitHub/paneldb-scripts'
+ALLOWED_EXTENSIONS = set(['txt', 'bed'])
+
