read and write bed-file in table

--- a/instance/paneldb_config.cfg
+++ b/instance/paneldb_config.cfg
@@ -8,6 +8,6 @@ SECRET_KEY='Ytvhsuasbnjj255ahsajakkaa1'
 MONGODB_URI = 'mongodb://localhost:27017/paneldb'
 
 # Upload folder local
-UPLOAD_FOLDER='/*'
+UPLOAD_FOLDER='*'
 ALLOWED_EXTENSIONS = set(['txt', 'bed'])
 
