Fixed more comments

--- a/instance/paneldb_config.cfg
+++ b/instance/paneldb_config.cfg
@@ -8,5 +8,5 @@ SECRET_KEY='Ytvhsuasbnjj255ahsajakkaa1'
 MONGODB_URI = 'mongodb://localhost:27017/paneldb'
 
 # Upload folder local
-UPLOAD_FOLDER='*'
+UPLOAD_FOLDER='/Users/emmasernstad/tmpfiles'
 
