--- a/instance/paneldb_config.cfg
+++ b/instance/paneldb_config.cfg
@@ -8,5 +8,4 @@ SECRET_KEY='Ytvhsuasbnjj255ahsajakkaa1'
 MONGODB_URI = 'mongodb://localhost:27017/paneldb'
 
 # Upload folder local
-UPLOAD_FOLDER='/Users/emmasernstad/tmpfiles'
-
+UPLOAD_FOLDER='path_to_temp_folder'
