introduced flash messages and created create baitset method

--- a/instance/paneldb_config.cfg
+++ b/instance/paneldb_config.cfg
@@ -6,6 +6,9 @@ SECRET_KEY='Ytvhsuasbnjj255ahsajakkaa1'
 
 #paneldb database connection URI:
 MONGODB_URI = 'mongodb://localhost:27017/paneldb'
+MONGODB_HOST = 'localhost'
+MONGODB_PORT = 27017
+MONGODB_DATABASE_NAME = 'paneldb'
 
-# Upload folder local
-UPLOAD_FOLDER='path_to_temp_folder'
+# Temp file upload folder:
+UPLOAD_FOLDER='path_to_temp_file' #this will be handled better later
