--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,6 +2,6 @@
 current_version = 2.8.1
 commit = True
 tag = True
-tag_name = v{new_version}
+tag_name = {new_version}
 
 [bumpversion:file:setup.py]
