revert config file

--- a/instance/paneldb_config.cfg
+++ b/instance/paneldb_config.cfg
@@ -11,4 +11,4 @@ MONGODB_PORT = 27017
 MONGODB_DATABASE_NAME = 'paneldb'
 
 # Temp file upload folder:
-UPLOAD_FOLDER = '/Users/chiararasi/Documents/temp' #this will be handled better later
+UPLOAD_FOLDER = 'path_to_temp_file' #this will be handled better later
